@@ -1,3 +1,13 @@
+2010-11-27  Romain Francois <romain@r-enthusiasts.com>
+
+	* include/include/*h: Updated to satisfy some grumblings from g++
+
+2010-11-27  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/fastLm.R: summary() now also computed R2 and adjR2
+
+	* inst/doc/RcppGSL/RcppGSL.Rnw: Adding some material to introcuction
+
 2010-05-25  Romain Francois <romain@r-enthusiasts.com>
 
 	* inst/include/RcppGSLForward.h : add indexing operator, stl iterator
